2003-12-10  Lluis Sanchez Gual  <lluis@ximian.com>

	* SoapServices.cs: Little fix: correctly encode namespaces.

2003-12-10  Martin Willemoes Hansen  <mwh@sysrq.dk>

	* RemotingConfiguration.cs: fixed wrong attribute name
	  sponsorShipTimeOut it should be sponsorshipTimeout

2003-12-03  Lluis Sanchez Gual <lluis@ximian.com>

	* SoapServices.cs: Little fix in namespace construction.
	
2003-11-28  Dick Porter  <dick@ximian.com>

	* TypeInfo.cs: 
	* RemotingConfiguration.cs: Use the char form of IndexOf, so that
	the comparison is done with the Invariant culture.

2003-11-26  Lluis Sanchez Gual <lluis@ximian.com>

	* InternalRemotingServices.cs: Fixed GetCachedSoapAttribute().
	* RemotingConfiguration.cs: Implemented CustomErrorsEnabled(). 
	  Added support for soapInterop configuration section.
	* SoapServices.cs: Several fixes to match MS behavior.

2003-11-25  Lluis Sanchez Gual <lluis@ximian.com>

	* InternalRemotingServices.cs: Implemented GetCachedSoapAttribute().
	* SoapServices.cs: Implemented missing methods.
	* WellKnownClientTypeEntry.cs: Initialize object_url in constructor.

2003-11-24  Jackson Harper <jackson@ximian.com>

	* ServerIdentity.cs: Get non public types, so remote objects can
	be non public or have non public constructors.
	
2003-11-19  Lluis Sanchez Gual <lluis@ximian.com>

	* InternalRemotingServices.cs: Added missing attributes.
	  
2003-11-17  Lluis Sanchez Gual <lluis@ximian.com>

	* InternalRemotingServices.cs: Added CLSCompliant to SetServerIdentity
	  (MethodCall is not compliant)
	* IObjectHandle.cs: Set correct value for Guid.
	
2003-11-16  Lluis Sanchez Gual <lluis@ximian.com>

	* IObjectHandle.cs, ObjectHandle.cs: Added missing attributes.
	* RemotingConfiguration.cs: GetRegisteredActivatedClientTypes made public.
	  Declared CustomErrorsEnabled() method.
	* RemotingServices.cs: Implemented GetSessionIdForMethodMessage().
	  IsAsyncMessage must be internal.
	* InternalRemotingServices.cs: Added.
